additional params to show summary on home

--- a/content/actualités/fincours24122021.md
+++ b/content/actualités/fincours24122021.md
@@ -7,6 +7,7 @@ draft       = false
 author      = "direction"
 tags        = ["école", "agenda"]
 description = ""
+showmore    = true
 +++
 
-Le gourvernement de la Fédération Wallonie-Bruxelles a décidé de suspendre les cours le vendredi 24 décembre 2021 après-midi dans les établissements scolaires d'enseignement obligatoire. De même, il a décidé de dispenser de service les membres du personnel de l'enseignement obligatoire. De ce fait, aucune garderie ne sera organisé l'après midi.
+Le gourvernement de la Fédération Wallonie-Bruxelles a décidé de suspendre les cours le vendredi 24 décembre 2021 après-midi dans les établissements scolaires d'enseignement obligatoire. De même, il a décidé de dispenser de service les membres du personnel de l'enseignement obligatoire. De ce fait, aucune garderie ne sera organisé l'après midi.<!--more-->
